# dir_bin

./: Cargo.toml  LICENSE  README.md  TODO.md  path_manager.zsh
docs/: path_manager.zsh
src/: main.rs
